--- a/index.html
+++ b/index.html
@@ -37,20 +37,44 @@
       <!-- Экран с формой контактов -->
       <section id="contact-screen" class="card hidden">
         <h2 class="subtitle">Оставьте контакты, чтобы увидеть результат</h2>
+        <!-- Минимальные улучшения UX: автозаполнение и понятные примеры в полях -->
         <form id="contact-form" novalidate>
           <div class="form-group">
             <label for="name">Имя</label>
-            <input type="text" id="name" name="name" required />
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Например, Анна"
+              autocomplete="name"
+              required
+            />
             <p class="error-message" id="name-error"></p>
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Например, anna@example.ru"
+              autocomplete="email"
+              inputmode="email"
+              required
+            />
             <p class="error-message" id="email-error"></p>
           </div>
           <div class="form-group">
             <label for="phone">Телефон</label>
-            <input type="tel" id="phone" name="phone" placeholder="+7..." required />
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder="+7 900 123-45-67"
+              autocomplete="tel"
+              inputmode="tel"
+              required
+            />
             <p class="error-message" id="phone-error"></p>
           </div>
           <button type="submit" class="btn btn-primary">Узнать результат</button>
